# ot-harjoitusty

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kaytto-ohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  pakkauskaavio.md
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
src/entities/: book.py
src/repositories/: book_repository.py  user_repository.py
src/services/: book_service.py  user_service.py
src/tests/repositories/: book_repository_test.py  user_repository_test.py
src/tests/services/: book_service_test.py
src/ui/: login_view.py  main_view.py  register_view.py  ui.py
src/ui/repositories/: book_repository.py
src/ui/services/: book_service.py
